[package]
name = "ampack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies]
cli-table = "0.4"
hex = "0.4"
indicatif = "0.17"
rayon = "1.10"
serde_yaml = "0.9"
sha1 = "0.10"
